--- a/style.css
+++ b/style.css
@@ -18,17 +18,8 @@
     justify-content: center;
     align-items: center;
     animation: fadeaway 2.5s forwards;
-    animation-delay: 3.8s;
+    animation-delay: 5.8s;
     position: absolute;
-}
-
-@keyframes fadeaway {
-    0%{
-        opacity: 1;
-    }
-    100%{
-        opacity: 0;
-    }
 }
 
 #content{
@@ -41,15 +32,6 @@
 #content img{
     animation: logoanime 5s linear forwards;
     margin-bottom: 2vh;
-}
-
-@keyframes logoanime {
-    0%{
-        scale: 1;
-    }
-    100%{
-        scale: 1.3;
-    }
 }
 
 #slider{
@@ -67,16 +49,7 @@
     background: #f4f4f4;
     border-radius: 10px;
     display: block;
-    animation: slider 5s infinite;
-}
-
-@keyframes slider{
-    0%{
-        transform: translateX(-100%);
-    }
-    100%{
-        transform: translateX(100%);
-    }
+    animation: slider 5.8s infinite;
 }   
 
 #preloader p{
@@ -87,17 +60,305 @@
     margin-top: 2vh;
 }
 
+@keyframes fadeaway {
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}
+
+@keyframes slider{
+    0%{
+        transform: translateX(-100%);
+    }
+    100%{
+        transform: translateX(100%);
+    }
+}
+
+@keyframes logoanime {
+    0%{
+        scale: 1;
+    }
+    100%{
+        scale: 1.3;
+    }
+}
+
+
+nav{
+    height: 15vh;
+    width: 94%;
+    margin-left: 3%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    z-index: 10;
+}
+
+#navleft{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0.5vw;
+}
+
+#navleft img{
+    height: 4.5vh;
+}
+
+#navleft img:hover{
+    cursor: pointer;
+}
+
+#logoimage{
+    height: 10vh !important;
+}
+
+#navmid{
+    height: 8vh;
+    width: min(50%, 500px);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1vw;
+    background-color: #9ed4fe31;
+    border: 1px solid #9ed4fe;
+    border-radius: 5vw;
+    padding: 1vw 0.8vw;
+}
+
+#navmid img{
+    height: 2.4vw !important;
+}
+
+#navmid img:hover{
+    cursor: pointer;
+}
+
+#nav_menu{
+    padding: 0vw 1vw;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2vw;
+    font-family: 'Finger Paint', sans-serif;
+    font-size: 0.9vw;
+    color: #f4f4f4;
+    border: 1px solid #9ed4fe;
+    border-top:none ;
+    border-bottom:none ;
+}
+
+#nav_menu p:hover{
+    cursor: pointer;
+    scale: 1.1;
+    color: #f4f4f4d6;
+    transition: 100ms linear ;
+}
+
+nav button{
+    height: 5vh;
+    background-color: #9ed4fe74;
+    border: 1px solid #9ED5FE;
+    color: #f4f4f4;
+    padding: 0.5vw 1vw;
+    border-radius: 5vw;
+    font-family: "Finger Paint" , sans-serif;
+    font-size: 0.9vw;
+    display: flex;
+    align-items: center;
+    gap: 0.5vw;
+}
+
+nav button:hover{
+    cursor: pointer;
+}
+
+#playbtn{
+    position: absolute;
+    top: 90vh;
+    right: 0;
+}
+
+#scrollerbtn{
+    position: absolute;
+    top: 88vh;
+    right: 50%;
+    transform: translateX(50%);
+}
+
+#scrollerbtn:hover{
+    cursor: pointer;
+}
+
+#scrollerbtn img{
+    height: 9vh;
+}
 
 #hero{
     height: 100vh;
     width: 100%;
-    background: #1774BD;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-image: url(media/image1.png);
+    background-size: cover;
+    background-position: center;
+    transition: background-image 0.5s ease-in-out;
 }
 
 #hero video{
-    height: 100%;
-    width: 100%;
+    height: 10%;
+    width: 10%;
     object-fit: cover;
 }
+
+.content{
+    height: 820vh;
+    width: 100%;
+    position: absolute;
+    overflow: hidden;
+}
+
+.wrm{
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    z-index: 2;
+}
+
+.wrm img{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+
+.wrm h1{
+    position: absolute;
+    font-family: "mcf", sans-serif;
+    text-transform: uppercase;
+    font-size: 3.5vw;
+    line-height: 1;
+    color: #FDF5DE;
+}
+
+.wrm p{
+    position: absolute;
+    color: #FDF5DE;
+    font-family: " Finger Paint", sans-serif;
+}
+
+#wr1 h1{
+    bottom: 5vw;
+    right: 8vw;
+}
+
+#wr2 h1{
+    bottom: 6vw;
+    left: 4vw;
+}
+
+#wr2 p{
+    font-size: 1.1vw;
+    bottom: 2vw;
+    left: 4vw;
+}
+
+#wr3 h1{
+    font-size: 4vw;
+    bottom: 4vw;
+    right: 5vw;
+}
+
+#wr4 h1{
+    bottom: 6vw;
+    left: 4vw;
+}
+
+#wr4 p{
+    font-size: 1.1vw;
+    bottom: 2vw;
+    left: 4vw;
+}
+
+#wr5 h1{
+    bottom: 6vw;
+    left: 4vw;
+}
+
+#wr5 p{
+    font-size: 1.1vw;
+    bottom: 2vw;
+    left: 4vw;
+}
+
+#wr6 h1{
+    bottom: 10vw;
+    left: 34vw;
+    color: #FDF5DE;
+}
+
+#wr7{
+    height: 120vh;
+}
+
+#wr7 h1{
+    font-size: 15vw;
+    line-height: 0.9;
+    color: #FDF5DE;
+}
+
+#wr8{
+    background: linear-gradient( to top, #1774BD 50%, transparent);
+}
+
+#footer{
+    height: 60%;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+
+#footer_up{
+    height: 80%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding-top: 20vh;
+}
+
+#wr8 h1{
+    font-family: "Finger Paint", sans-serif;
+    position: absolute;
+    top: 40%;
+    left: 1vw;
+    font-size: 10.6vw;
+    font-weight: 300;
+    color: #FDF5DE;
+    border-bottom: 2px solid #9ED5FE;
+    line-height: 1.4;
+}
+
+#wr8 img{
+    position: absolute;
+    top: 20%;
+    left: 35vw;
+    height: 115vh;
+    width: 60vh;
+}
+
+
+
+
+
+
+
+
 
 
